# stroid

./: .gitignore  CHANGELOG.md  Doxyfile  meson.build  meson_options.txt  package_release.sh  pyproject.toml  readme.md  release.md  release.sh
build-check/: meson.build
build-config/: meson.build
build-config/libconfig/: meson.build
build-config/mfem/: meson.build
build-config/pybind/: meson.build
build-config/python/: meson.build
build-python/: meson.build
configs/: default_config.toml  test_external_domain.toml  test_external_domain_refinement_l1.toml  test_flattening.toml  test_polynomial_projection.toml  test_refinement_l2.toml  test_volume_no_external.toml  test_volume_spherical_no_external.toml  test_volume_spherical_with_external.toml  test_volume_with_external.toml
docs/: index.html
docs/html/: _logo_8png.html  annotated.html  annotated_dup.js  classes.html  config_8h.html  config_8h.js  config_8h__dep__incl.map  config_8h__dep__incl.md5  curvilinear_8cpp.html  curvilinear_8cpp.js  curvilinear_8cpp__incl.map  curvilinear_8cpp__incl.md5  curvilinear_8h.html  curvilinear_8h.js  curvilinear_8h__dep__incl.map  curvilinear_8h__dep__incl.md5  curvilinear_8h__incl.map  curvilinear_8h__incl.md5  dir_000004_000002.html  dir_000005_000002.html  dir_000009_000000.html  dir_000010_000002.html  dir_000012_000002.html  dir_31a6c70da1404d38d1b51e38b19548a1.html  dir_31a6c70da1404d38d1b51e38b19548a1.js  dir_31a6c70da1404d38d1b51e38b19548a1_dep.map  dir_31a6c70da1404d38d1b51e38b19548a1_dep.md5  dir_3f4f28e99864f6e7d54ad0c93ce0a2a5.html  dir_3f4f28e99864f6e7d54ad0c93ce0a2a5.js  dir_3f4f28e99864f6e7d54ad0c93ce0a2a5_dep.map  dir_3f4f28e99864f6e7d54ad0c93ce0a2a5_dep.md5  dir_49e56c817e5e54854c35e136979f97ca.html  dir_49e56c817e5e54854c35e136979f97ca.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_82887d4f338e92537fa9d809bec8c614.html  dir_82887d4f338e92537fa9d809bec8c614.js  dir_82887d4f338e92537fa9d809bec8c614_dep.map  dir_82887d4f338e92537fa9d809bec8c614_dep.md5  (+94 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  namespaces_0.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_6.js  (+1 more)
docs/static/: mainpage.md
src/: meson.build
src/include/stroid/: meson.build  stroid.h  stroid.h.in  version.h.in
src/include/stroid/IO/: mesh.h
src/include/stroid/config/: config.h
src/include/stroid/core/: context.h  element.h  spacing.h
src/include/stroid/exceptions/: exceptions.h  stroid_error.h
src/include/stroid/refinement/: uniform.h
src/include/stroid/topology/: block.h  curvilinear.h  key.h  mapping.h  optimize.h  topology.h
src/include/stroid/utils/: mesh_stats.h  mesh_utils.h  types.h
src/lib/IO/: mesh.cpp
src/lib/refinement/: uniform.cpp
src/lib/topology/: curvilinear.cpp  key.cpp  mapping.cpp  optimize.cpp  topology.cpp
src/lib/utils/: mesh_stats.cpp  mesh_utils.cpp
src/python/: bindings.cpp
src/python/IO/: bindings.cpp  bindings.h
src/python/config/: bindings.cpp  bindings.h
src/python/exceptions/: bindings.cpp  bindings.h
src/python/refinement/: bindings.cpp  bindings.h
src/python/stroid/: __init__.py
src/python/utils/: bindings.cpp  bindings.h
subprojects/: libconfig.wrap  mfem.wrap  pybind11.wrap
subprojects/packagefiles/hypre/: CMakeLists.txt
subprojects/packagefiles/mfem/: disable_mfem_selfcheck.patch
subprojects/packagefiles/pybind11/: LICENSE.build  meson.build
tests/: meson.build  stroidTest.cpp
tests/sandbox/: default.toml  meson.build  sandbox_test.cpp
tests/stroid_sandbox/: main.cpp  meson.build
tools/: stroid.cpp
tools/python/: visualize_winding.py
utils/: build-wheels-linux_aarch64.sh  build-wheels-linux_x86_64.sh  build-wheels-macos_aarch64.sh  installPyEnvVersions.sh  readme.md
