option('pkg_config', type: 'boolean', value: false, description: 'generate pkg-config file for stroid')
option('build_tests', type: 'boolean', value: false, description: 'compile subproject tests')
option('build_python', type: 'boolean', value: true, description: 'build the python bindings so you can use stroid from python.')